--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 <span class="ico-circle"><i class="bi bi-check"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="450" data-purecounter-duration="1"
+                <p data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1"
                   class="counter purecounter"></p>
                 <span class="counter-text">WORKS COMPLETED</span>
               </div>
@@ -295,7 +295,7 @@
                 <span class="ico-circle"><i class="bi bi-journal-richtext"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1"
+                <p data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1"
                   class="counter purecounter"></p>
                 <span class="counter-text">YEARS OF EXPERIENCE</span>
               </div>
@@ -307,7 +307,7 @@
                 <span class="ico-circle"><i class="bi bi-people"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="550" data-purecounter-duration="1"
+                <p data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1"
                   class="counter purecounter"></p>
                 <span class="counter-text">TOTAL CLIENTS</span>
               </div>
@@ -319,7 +319,7 @@
                 <span class="ico-circle"><i class="bi bi-award"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="48" data-purecounter-duration="1"
+                <p data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1"
                   class="counter purecounter"></p>
                 <span class="counter-text">AWARD WON</span>
               </div>
@@ -506,7 +506,7 @@
             <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
               <div class="swiper-wrapper">
 
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                   <div class="testimonial-box">
                     <div class="author-test">
                       <img src="assets/img/testimonial-2.jpg" alt="" class="rounded-circle b-shadow-a">
@@ -519,18 +519,17 @@
                       </p>
                     </div>
                   </div>
-                </div><!-- End testimonial item -->
+                </div>End testimonial item -->
 
                 <div class="swiper-slide">
                   <div class="testimonial-box">
                     <div class="author-test">
-                      <img src="assets/img/testimonial-4.jpg" alt="" class="rounded-circle b-shadow-a">
-                      <span class="author">Marta Socrate</span>
+                      <img src="images/Webp.net-resizeimage.jpg" alt="" class="rounded-circle b-shadow-a">
+                      <span class="author">Barack Obama</span>
                     </div>
                     <div class="content-test">
                       <p class="description lead">
-                        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit.
+                        “Change will not come if we wait for some other person or if we wait for some time. We are the ones we’ve been waiting for.” -- Barack Obama
                       </p>
                     </div>
                   </div>
@@ -557,7 +556,7 @@
                 Blog
               </h3>
               <p class="subtitle-a">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+               
               </p>
               <div class="line-mf"></div>
             </div>
