--- a/index.html
+++ b/index.html
@@ -47,23 +47,7 @@
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#work">Work</a></li>
           <li><a class="nav-link scrollto " href="#blog">Blog</a></li>
-          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li> -->
+          
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -81,7 +65,7 @@
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">I am Praveen Sajeev</h1>
           <p class="hero-subtitle"><span class="typed"
-              data-typed-items="Web Designer,Full Stack Developer,Dancer"></span></p>
+              data-typed-items="Web Designer,Full Stack Developer"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -227,50 +211,7 @@
               </div>
             </div>
           </div>
-          <!-- <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-binoculars"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Responsive Design</h2>
-                <p class="s-description text-center">
-                  “If there’s one thing you learn by working on a lot of different Web sites, it’s that almost any
-                  design idea–no matter how appallingly bad–can be made usable in the right circumstances, with enough
-                  effort.”
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-brightness-high"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Data analyzing</h2>
-                <p class="s-description text-center">
-                  “Every second of every day, our senses bring in way too much data than we can possibly process in our brains.”
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class=""></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Dancing</h2>
-                <p class="s-description text-center">
-                  “Dancing is like breathing — missing a day doing either is very bad.”
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>End Services Section -->
+          <!-- End Services Section -->
 
     <!-- ======= Counter Section ======= -->
     <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/counters-bg.jpg)">
@@ -348,7 +289,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="https://praveensajeev.github.io/Devbook-bootstrap/" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="images/dynamic.png" alt="" class="img-fluid">
                 </div>
@@ -372,7 +313,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="https://praveensajeev.github.io/Amazone_prime/" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="images/static 2.png" alt="" class="img-fluid">
                 </div>
@@ -396,31 +337,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
-                <div class="work-img">
-                  <img src="images/static_pepsi.png" alt="" class="img-fluid">
-                </div>
-              </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Pepsi_static</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- <div class="col-md-4">
-            <div class="work-box">
-              <a href="assets/img/work-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="https://praveensajeev.github.io/boat_static/" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="images/boat_static.png" alt="" class="img-fluid">
                 </div>
@@ -428,7 +345,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">BoatStatic</h2>
+                    <h2 class="w-title">Boat -static</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
@@ -442,58 +359,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="assets/img/work-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
-                <div class="work-img">
-                  <img src="assets/img/work-5.jpg" alt="" class="img-fluid">
-                </div>
-              </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Studio Lena Mado</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2022</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="assets/img/work-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
-                <div class="work-img">
-                  <img src="assets/img/work-6.jpg" alt="" class="img-fluid">
-                </div>
-              </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Studio Big Bang</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2017</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section> -->
+          
     <!-- End Portfolio Section -->
 
     <!-- ======= Testimonials Section ======= -->
@@ -524,12 +390,12 @@
                 <div class="swiper-slide">
                   <div class="testimonial-box">
                     <div class="author-test">
-                      <img src="images/Webp.net-resizeimage.jpg" alt="" class="rounded-circle b-shadow-a">
-                      <span class="author">Barack Obama</span>
+                      <img src="images/hrithvik.jpeg" alt="" class="rounded-circle b-shadow-a" style="width: 150px;height: 150px;">
+                      <span class="author">Nikhil Kilivayil</span>
                     </div>
                     <div class="content-test">
                       <p class="description lead">
-                        “Change will not come if we wait for some other person or if we wait for some time. We are the ones we’ve been waiting for.” -- Barack Obama
+                        The person motivates me to take risks
                       </p>
                     </div>
                   </div>
@@ -566,7 +432,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="blog-single.html"><img src="assets/img/post-1.jpg" alt="" class="img-fluid"></a>
+                <a href="#"><img src="assets/img/post-1.jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -574,7 +440,7 @@
                     <h6 class="category">Travel</h6>
                   </div>
                 </div>
-                <h3 class="card-title"><a href="blog-single.html"> Travel</a></h3>
+                <h3 class="card-title"><a href=""> Travel</a></h3>
                 <p class="card-description">
                   “Do not follow where the path may lead. Go instead where there is no path and leave a trail”
                 </p>
@@ -700,7 +566,7 @@
                           <div class="col-md-12 text-center my-3">
                             <!-- <div class="loading">Loading</div>
                             <div class="error-message"></div> -->
-                            <div class="sent-message">Your message has been sent. Thank you!</div>
+                            <!-- <div class="sent-message">Your message has been sent. Thank you!</div> -->
                           </div>
                           <div class="col-md-12 text-center">
                             <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
@@ -717,13 +583,10 @@
                     </div>
                     <div class="more-info">
                       <p class="lead">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
-                        expedita aperiam aliquid at.
-                        Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                        mollitia inventore?
+                        if you have any questions, please feel free to contact me
                       </p>
                       <ul class="list-ico">
-                        <li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
+                        <li><span class="bi bi-geo-alt"></span> Thrissur kerela 680561</li>
                         <li><span class="bi bi-phone"></span> 9995398596</li>
                         <li><span class="bi bi-envelope"></span> sajeevpraveen2@gmail.com</li>
                       </ul>
